# chai

./: .gitignore
examples/msvc9/: CHAI3D.sln
examples/msvc9/01-devices/: devices.vcproj  devices.vcxproj  devices.vcxproj.filters
examples/msvc9/01-devices/Debug/: ResolveAssemblyReference.cache
examples/msvc9/01-devices/x64/Debug/: 01 - devices_manifest.rc  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
examples/msvc9/01-devices/x64/Release/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  mt.write.1.tlog
examples/msvc9/10-oring/: oring.vcproj  oring.vcxproj  oring.vcxproj.filters
examples/msvc9/10-oring/x64/Debug/: 10 - oring_manifest.rc  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.read.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
examples/msvc9/11-effects/: effects.vcproj  effects.vcxproj  effects.vcxproj.filters
examples/msvc9/11-effects/x64/Debug/: 11 - effects_manifest.rc  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  mt.command.1.tlog  mt.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog  vc100.idb
examples/msvc9/12-polygons/: polygons.vcproj  polygons.vcxproj  polygons.vcxproj.filters
examples/msvc9/12-polygons/x64/Debug/: 12 - polygons_manifest.rc  CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  vc100.idb  (+5 more)
examples/msvc9/20-map/: map.vcproj  map.vcxproj  map.vcxproj.filters
examples/msvc9/21-object/: object.vcproj  object.vcxproj  object.vcxproj.filters
examples/msvc9/22-chrome/: chrome.vcproj  chrome.vcxproj  chrome.vcxproj.filters
examples/msvc9/23-tooth/: tooth.vcproj  tooth.vcxproj  tooth.vcxproj.filters
examples/msvc9/25-cubic/: cubic.vcproj  cubic.vcxproj  cubic.vcxproj.filters
examples/msvc9/25-cubic/src/: 25-cubic.cpp
examples/msvc9/40-ODE-cube/: ode-cube.vcproj  ode-cube.vcxproj  ode-cube.vcxproj.filters
examples/msvc9/41-ODE-pool/: ode-pool.vcproj  ode-pool.vcxproj  ode-pool.vcxproj.filters
examples/msvc9/42-ODE-mesh/: ode-mesh.vcproj  ode-mesh.vcxproj  ode-mesh.vcxproj.filters
examples/msvc9/50-GEL-membrane/: GEL-membrane.vcproj  GEL-membrane.vcxproj  GEL-membrane.vcxproj.filters
examples/msvc9/51-GEL-cell/: GEL-cell.vcproj  GEL-cell.vcxproj  GEL-cell.vcxproj.filters
examples/msvc9/52-GEL-duck/: GEL-duck.vcproj  GEL-duck.vcxproj  GEL-duck.vcxproj.filters
hw3_template/: CMakeLists.txt  MyForceAlgorithm.cpp  MyForceAlgorithm.h  MyProgram.cpp  stanfor.sdf  stanfor.sln  stanfor.vcxproj  stanfor.vcxproj.filters  tex_metal.tga  tex_metal_h.tga  tex_rubber.tga  tex_rubber_h.tga  tex_unknown.tga  tex_wood.tga  tex_wood_h.tga
hw3_template/Debug/: CL.read.1.tlog  CL.write.1.tlog  cl.command.1.tlog  stanfor.lastbuildstate  vc100.idb
projects/msvc9/: CHAI3D.sln  CHAI3D.sln.old  UpgradeLog.XML  chai3d_complete.vcproj  chai3d_complete.vcxproj  chai3d_complete.vcxproj.filters
projects/msvc9/x64/Debug/: CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
projects/msvc9/x64/Release/: CHAI 3D.lastbuildstate  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  cl.command.1.tlog  lib.command.1.tlog
src/forces/: CProxyPointForceAlgo.cpp
src/graphics/: CTexture2D.h
(+153 files in other folders)
